Readiness/OCP-4.16/networking/secured-route/files/re-encrypt.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tls-web-server
  labels:
    app: tls-web-server
spec:
  host: tls-web-server.apps.cchen416.cchen.work  # Replace with your desired hostname
  to:
    kind: Service
    name: tls-web-server
  port:
    targetPort: 30888
  tls:
    termination: reencrypt
    key: ""
    certificate: ""
    destinationCACertificate: |
      -----BEGIN CERTIFICATE-----
      MIIBxzCCAW2gAwIBAgIUWMwQ6PjiJAYzgglM3nxPwq2ALCUwCgYIKoZIzj0EAwIw
[...]
      toZncC2YTXVt/tbzX4t/lCnr5IDThVzkOX3i
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tls-web-server
  labels:
    app: tls-web-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tls-web-server
  template:
    metadata:
      labels:
        app: tls-web-server
    spec:
      containers:
      - name: tls-web-server
        image: quay.io/rhn_support_cchen/tls-web-server:v1.0
        command: ["/tls-web-server"]
        ports:
        - containerPort: 30888
        volumeMounts:
        - name: tls-cert
          mountPath: "/etc/tls"
          readOnly: true
      volumes:
      - name: tls-cert
        secret:
          secretName: myapp-tls

---
apiVersion: v1
kind: Service
metadata:
  name: tls-web-server
  labels:
    app: tls-web-server
spec:
  selector:
    app: tls-web-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 30888
---
